--- a/style.css
+++ b/style.css
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
-
-
-    
-
-    
+<head>
+      <title>Edit</title>
       
-   
+   </head>
    <body>
          <script>
          var password = "choltzman";
@@ -47,5 +44,3 @@
       <a href="index.html">Home</a>
    </body>
 </head>
-   
-
