--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@
            blue = document.querySelector('#bluei').value;
            colorStr = "rgb(" + red + "," + green + "," + blue + ")";
            document.body.style.backgroundColor = colorStr;
+            <a href="index.html">Home</a>
        }
        showValues = function() {
          document.querySelector('#redv').innerHTML = document.querySelector("#redi").value;
@@ -41,6 +42,6 @@
        }
        window.onload = function() { changeColor(); showValues(); }
      </script>
-      <a href="index.html">Home</a>
+            <button onclick="function()">Click me</button>
    </body>
 </head>
